# conilab

./: .gitignore  Makefile  README.md  pyproject.toml
conilab/data_functions/: data.py  image_handling.py
conilab/hcp-disease/: data_dictionaries_for_subjects.py  data_functions.py  dev_symptom_clusters.ipynb  factor_analysis.py  nbridge_example.ipynb  original_nbridge_scoring.py  symptom_clusters.ipynb
conilab/hcp-disease/behavioural_data/: nbridge_example.ipynb  psychological_clusters.ipynb  questionnaire_scoring.py  sub-scores_symptoms.ipynb
conilab/hcp-disease/cca_test/: build_ca3_model.ipynb  c3a.py  c3a_wx_enf.ipynb  ca3.py  ca3_min_neuro.py  ca3_testing.ipynb  cca.ipynb  cca3_with_synthetic_data.ipynb
conilab/nfact/: coverage.py
conilab/nfact_project/: create_correlation_csv.py
conilab/notebooks/: cca.ipynb  flip_medial_wall.ipynb  predictive_coding.ipynb
conilab/plotting/: plots.py
conilab/scripts_to_run/: clean_volume_img.py  create_correlation_csv.py  hitmaps.py  rsfmri_decomp.py  threshold_img.py
conilab/stats/: bayesian.py  stats.py
conilab/utils_scripts/: git_commit.py  pre-commit
nfact_project/: create_correlation_csv.py
