# pyproject.toml

[build-system]
requires      = ["setuptools>=44.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conilab"
version = "1.0.0"
description = "conilab"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["conilab"]

dependencies = [
    'pandas',
    'matplotlib',
    'numpy',
    'seaborn',
    'nilearn'

]
requires-python = ">=3.8"

[project.scripts]
create_correlations = "conilab.scripts_to_run.create_correlation_csv:main"
rs_ica = "conilab.scripts_to_run.rsfmri_decomp:main"
hitmaps = "conilab.scripts_to_run.hitmaps:main"